<resources>
    <string name="app_name">QR Score</string>
    <string name="auth_welcome_text_view">Welcome to QR Score</string>
    <string name="auth_login_text_view">Logging In!</string>
    <string name="auth_new_user">New User</string>
    <string name="auth_returning_user">Returning</string>
    <string name="auth_login_by_qr_user">Login by QR</string>

    <!--  Nav bar icon  -->
    <string name="home_nav_ic">Home</string>
    <string name="map_nav_ic">Map</string>
    <string name="scan_nav_ic">Scan</string>
    <string name="leaderboard_nav_ic">Leaderboard</string>
    <string name="profile_nav_ic">Profile</string>

    <!-- Profile  -->
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone_number">Phone Number</string>
    <string name="profile_generateQR">Generate QR</string>
    <string name="profile_save_button">SAVE</string>

    <!--  Leaderboard  -->
    <string name="leaderboard_top_qr_codes">TOP QR CODES</string>
    <string name="leaderboard_top_players">TOP PLAYERS</string>
    <string name="leaderboard_search_player">Search Player by username</string>
    <string name="leaderboard_view_player">View Player</string>

    <!--  List Item  -->
    <string name="list_item_rank">Rank</string>
    <string name="list_item_score">Score</string>
    <string name="list_item_player">Player</string>
    <string name="menu_button_description">Hamburger menu button</string>

    <!--  Home Fragment  -->
    <string name="home_fragment_qr_view_qr_code">View QR Code</string>
    <string name="home_fragment_qr_delete_qr_code">Delete QR Code</string>
</resources>