<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment_item"
        android:title="@string/home_nav_ic"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/map_fragment_item"
        android:title="@string/map_nav_ic"
        android:icon="@drawable/ic_map" />

    <item
        android:id="@+id/scan_fragment_item"
        android:title="@string/scan_nav_ic"
        android:icon="@drawable/ic_scan" />

    <item
        android:id="@+id/leaderboard_fragment_item"
        android:title="@string/leaderboard_nav_ic"
        android:icon="@drawable/ic_leaderboard" />

    <item
        android:id="@+id/profile_fragment_item"
        android:title="@string/profile_nav_ic"
        android:icon="@drawable/ic_profile" />

</menu>