<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileAuthActivity">

    <include
        layout="@layout/blank_actionbar"/>

    <TextView
        android:id="@+id/auth_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/auth_welcome_text_view"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/auth_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_text_view" />

    <TextView
        android:id="@+id/auth_login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/auth_login_text_view"
        android:visibility="invisible"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_progress_bar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_new_user_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button_selector"
        android:backgroundTint="@null"
        android:clickable="true"
        android:text="@string/auth_new_user"
        android:textColor="@drawable/round_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_login_by_qr_user_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_returning_user_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button_selector"
        android:backgroundTint="@null"
        android:clickable="true"
        android:text="@string/auth_returning_user"
        android:textColor="@drawable/round_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_login_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_login_by_qr_user_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button_selector"
        android:backgroundTint="@null"
        android:clickable="true"
        android:text="@string/auth_login_by_qr_user"
        android:textColor="@drawable/round_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_returning_user_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_owner_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button_selector"
        android:backgroundTint="@null"
        android:clickable="true"
        android:text="Owner"
        android:textColor="@drawable/round_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_new_user_button" />
</androidx.constraintlayout.widget.ConstraintLayout>