<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:id="@+id/profile_fragment">

    <include
        layout="@layout/profile_actionbar"/>

    <TextView
        android:id="@+id/profile_refreshQR_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="32dp"
        android:text="@string/profile_refreshQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/profile_username"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_refreshQR_button"/>

    <TextView
        android:id="@+id/userUID_textView"
        android:background="@drawable/useruid_text_box"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textView"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/first_name_textInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/profile_first_name"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_profile"
        app:layout_constraintTop_toBottomOf="@+id/userUID_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_textInputEditText"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/last_name_textInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/profile_last_name"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_profile"
        app:layout_constraintTop_toBottomOf="@+id/first_name_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_textInputEditText"
            android:layout_width="match_parent"
            android:maxLength="30"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/email_textInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/profile_email"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/phone_number_textInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/profile_phone_number"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_save_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button_selector"
        android:backgroundTint="@null"
        android:clickable="true"
        android:text="@string/profile_save_button"
        android:textColor="@drawable/round_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_fragment_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_textInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/profile_fragment_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>
